- Rename perfume_specs option to production_perfume

- Polish precision striking by cruise missiles
  - Now plays the correct animations and despawns the unit afterward
  - Controlled by the polish_precision_striking config option, which used to be named polish_non_air_precision_striking
- Enable cruise missiles to perform stealth attack bombard
- Option to show more strategic resources (up to 13) in the box on the top left of the city screen by packing them in more tightly
  - Named compact_strategic_resource_display_on_city_screen, off by default
- Fix tile visibility check in stealth attack bombard

* RELEASE 20 PREVIEW 2
- Fix bug related to "Disables Diseases From Flood Plains" tech flag
  - Option named patch_disease_stopping_tech_flag_bug, off by default b/c this fix causes a lot more disease under the standard rules
- Display negative yields from generated resources
- Option to make planting forests produce LM forest terrain (named convert_to_landmark_after_planting_forest)
- Fix free unit glitch from switching production to a building through the unit limit reached popup
- Rebuild the trade network after loading save data for improvements beyond the limit
- Fix yields from resource generating buildings not always appearing after a new scenario is loaded

* RELEASE 20 PREVIEW 1
- Remove city improvement limit
  - Controlled by config option remove_city_improvement_limit
- Option to show unit hitpoints on the stealth attack target selection popup (named show_hp_of_stealth_attack_options in config)
- Option to have a warning when the building you've selected to build would replace another already built in the city
  - Named warn_when_chosen_building_would_replace_another in config, off by default
- Option to prevent stealth attacks from targeting units that are invisible and unrevealed (named exclude_invisible_units_from_stealth_attack)
- Stop barbarian spawns from bankrupting the barbarian player (matters only if barbs are allowed to capture cities)