@@ -96,6 +96,7 @@ enum special_zone_of_control_rules {
 
 enum perfume_kind {
 	PK_PRODUCTION = 0,
+	PK_TECHNOLOGY,
 
 	COUNT_PERFUME_KINDS
 };
