@@ -296,6 +296,10 @@ anarchy_length_percent = 100
 ; (e.g. ä, ö, ñ, ç) and all other non-English letters available in the Windows-1252 encoding (e.g. ß, þ, æ).
 production_perfume = []
 
+; Add perfume to a technology to change how valuable the AI judges the tech to be. Each point of perfume is worth roughly one gold in trade, and also
+; affects what the AI chooses to research. The format matches production_perfume above, ex.: [Medicine: 500, Fascism: -1000, "Replacable Parts": 500].
+technology_perfume = []
+
 ; The AI production ranking is the point value the AI gives to each available build in some city. To view it, press P while viewing an AI city.
 enable_ai_production_ranking = true
 
