@@ -462,6 +462,7 @@ enum game_object_kind {
 	GOK_UNIT_TYPE = 0,
 	GOK_BUILDING,
 	GOK_RESOURCE,
+	GOK_TECHNOLOGY,
 
 	COUNT_GAME_OBJECT_KINDS
 };
@@ -495,6 +496,16 @@ find_game_object_id_by_name (enum game_object_kind kind, struct string_slice con
 		if (name->len <= sizeof res_type->Name)
 			for (int n = start_id; n < p_bic_data->ResourceTypeCount; n++)
 				if (slice_matches_str (name, p_bic_data->ResourceTypes[n].Name)) {
+					*out = n;
+					return true;
+				}
+		return false;
+	}
+	case GOK_TECHNOLOGY: {
+		Advance * adv;
+		if (name->len <= sizeof adv->Name)
+			for (int n = start_id; n < p_bic_data->AdvanceCount; n++)
+				if (slice_matches_str (name, p_bic_data->Advances[n].Name)) {
 					*out = n;
 					return true;
 				}
@@ -564,17 +575,20 @@ struct perfume_spec {
 };
 
 enum recognizable_parse_result
-parse_perfume_spec (char ** p_cursor, struct error_line ** p_unrecognized_lines, void * out_perfume_spec)
+parse_perfume_spec (char ** p_cursor, enum perfume_kind kind, struct error_line ** p_unrecognized_lines, void * out_perfume_spec)
 {
 	char * cur = *p_cursor;
 	struct string_slice name;
-	City_Order unused;
+	City_Order unused_city_order;
+	int unused_id;
 	int amount;
 	if (parse_string (&cur, &name) &&
 	    skip_punctuation (&cur, ':') &&
 	    parse_int (&cur, &amount)) {
 		*p_cursor = cur;
-		if (find_city_order_by_name (&name, &unused)) {
+
+		if (((kind == PK_PRODUCTION) && find_city_order_by_name (&name, &unused_city_order)) ||
+		    ((kind == PK_TECHNOLOGY) && find_game_object_id_by_name (GOK_TECHNOLOGY, &name, 0, &unused_id))) {
 			struct perfume_spec * out = out_perfume_spec;
 			snprintf (out->name, sizeof out->name, "%.*s", name.len, name.str);
 			out->name[(sizeof out->name) - 1] = '\0';
@@ -586,6 +600,18 @@ parse_perfume_spec (char ** p_cursor, struct error_line ** p_unrecognized_lines,
 		}
 	} else
 		return RPR_PARSE_ERROR;
+}
+
+enum recognizable_parse_result
+parse_production_perfume_spec (char ** p_cursor, struct error_line ** p_unrecognized_lines, void * out_perfume_spec)
+{
+	return parse_perfume_spec (p_cursor, PK_PRODUCTION, p_unrecognized_lines, out_perfume_spec);
+}
+
+enum recognizable_parse_result
+parse_technology_perfume_spec (char ** p_cursor, struct error_line ** p_unrecognized_lines, void * out_perfume_spec)
+{
+	return parse_perfume_spec (p_cursor, PK_TECHNOLOGY, p_unrecognized_lines, out_perfume_spec);
 }
 
 enum recognizable_parse_result
@@ -1273,9 +1299,17 @@ load_config (char const * file_path, int path_is_relative_to_mod_dir)
 					if (0 <= (recog_err_offset = read_recognizables (&value,
 											 &unrecognized_lines,
 											 sizeof (struct perfume_spec),
-											 parse_perfume_spec,
+											 parse_production_perfume_spec,
 											 (void **)&perfume_spec_lists[PK_PRODUCTION].items,
 											 &perfume_spec_lists[PK_PRODUCTION].count)))
+						handle_config_error_at (&p, value.str + recog_err_offset, CPE_BAD_VALUE);
+				} else if (slice_matches_str (&p.key, "technology_perfume")) {
+					if (0 <= (recog_err_offset = read_recognizables (&value,
+											 &unrecognized_lines,
+											 sizeof (struct perfume_spec),
+											 parse_technology_perfume_spec,
+											 (void **)&perfume_spec_lists[PK_TECHNOLOGY].items,
+											 &perfume_spec_lists[PK_TECHNOLOGY].count)))
 						handle_config_error_at (&p, value.str + recog_err_offset, CPE_BAD_VALUE);
 				} else if (slice_matches_str (&p.key, "building_prereqs_for_units")) {
 					if (0 <= (recog_err_offset = read_building_unit_prereqs (&value, &unrecognized_lines, &cfg->building_unit_prereqs)))
@@ -10079,8 +10113,14 @@ patch_Map_change_tile_terrain_by_worker (Map * this, int edx, enum SquareTypes n
 int __fastcall
 patch_Leader_ai_eval_technology (Leader * this, int edx, int id, bool param_2, bool param_3)
 {
-	int base = Leader_ai_eval_technology (this, __, id, param_2, param_3);
-	return base;
+	int tr = Leader_ai_eval_technology (this, __, id, param_2, param_3);
+
+	// Apply perfume
+	int perfume_amount;
+	if (stable_look_up (&is->current_config.perfume_specs[PK_TECHNOLOGY], p_bic_data->Advances[id].Name, &perfume_amount))
+		tr += perfume_amount;
+
+	return tr;
 }
 
 int __fastcall
